Fixed dark mode heading text

--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -48,6 +48,11 @@
   color: $textColor !important;
 }
 
+.greeting-text-white {
+  @extend .greeting-text;
+  color: white !important;
+}
+
 .greeting-text-p {
   font-size: 30px;
   line-height: 40px;
